# Space-Invaderz

./: CMakeLists.txt  main.c  player.c  player.h
src/: ball.c  ball.h  collision.c  collision.h  player.c  player.h
